# natex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
benchmarks/: README.md  guidance_eval.py  run_dee_sim.py  run_did_curves.py  run_iv_selection.py  run_nig_curve.py
docs/: math_audit_final.md
docs/case_studies/: epoch-kinks.md
docs/method_cards/: dee.md  iv_sc.md  kink.md  llm_analyst.md  lord3.md  suddds.md  survey.md
docs/plans/: phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-final-review.md  phase-kinks.md  phase-llm-analyst.md  phase-report-paper.md  phase-skills-docs.md  phase-survey.md
docs/release_notes/: v0.1.0.md
docs/status/: final-review.md  future_work.md  overnight-papers.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-kinks.md  phase-llm-analyst.md  phase-report-paper.md  phase-skills-docs.md
paper/: Makefile  README.md  main.tex
paper/figures/: make_figures.py
papers/: README.md
papers/_cover/: cover.tex
papers/aei-btos-state-gradient/: README.md  main.tex
papers/benchmark-contamination-dee/: .gitignore  README.md  main.tex
papers/btos-rewording-rdd/: README.md  main.tex
papers/btos-sector-did-r1/: README.md  main.tex
papers/btos-spliced-r1-extension/: README.md  main.tex
papers/capex-dik-chatgpt/: README.md  main.tex
papers/capstone/: README.md  main.tex
papers/chinchilla-writeup/: .gitignore  README.md  main.tex
papers/chip-suddds-exportcontrols/: README.md  main.tex
papers/cve-monthly-kink-r1/: README.md  main.tex
papers/datacenter-sites-2025q1/: README.md  main.tex
papers/eci-fresh-kink-o1/: README.md  main.tex
papers/euact-bunching-writeup/: README.md  main.tex
papers/export-controls-three-leg/: README.md  main.tex
papers/lmarena-sycophancy-aba/: README.md  main.tex
papers/prop99-validation-writeup/: .gitignore  (+2 more)
scripts/: build_papers.sh  merge_all_papers.py  refresh_paper_artifacts.sh
tests/: conftest.py  doc_helpers.py  report_helpers.py  test_agent_docs.py  test_ar_ci.py  test_benchmarks_small.py  test_cli.py  test_cli_brief.py  test_cli_guidance_dir.py  test_cli_iv.py  test_cli_kink.py  test_cli_paper.py  test_cli_study.py  test_cli_survey.py  test_coarse.py  test_dee_benchmarks_small.py  test_dee_bma.py  test_dee_debias.py  test_dee_effects.py  test_dee_gp.py  test_dee_noise.py  test_dee_observational.py  test_dee_optional.py  test_did_background.py  test_did_benchmarks_small.py  test_did_controls.py  test_did_effects.py  test_did_statistics.py  test_did_validation.py  test_discover.py  test_docs.py  test_donors.py  test_estimate.py  test_estimate_missing_outcome.py  test_fetch_data.py  test_final_review_docs.py  test_geometry.py  test_guidance_eval.py  test_import.py  test_intake_plans.py  (+55 more)
(+108 files in other folders)
