[project]
name = "natex-discovery"
version = "0.1.0.dev0"
description = "Automated natural-experiment discovery (LoRD3 lineage): find, validate, and estimate RDDs and DiDs in tabular data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hauke Hillebrandt" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "pydantic>=2.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=8", "ruff>=0.4", "pytest-cov"]

[project.scripts]
natex = "natex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/natex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["backtest: needs local real datasets (env NATEX_DATA); deselect with -m 'not backtest'"]
addopts = "-m 'not backtest'"
