[project]
name = "natex-discovery"
version = "0.1.0.dev0"
description = "Automated natural-experiment discovery (LoRD3 lineage): find, validate, and estimate RDDs and DiDs in tabular data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hauke Hillebrandt" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "pydantic>=2.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
report = ["jinja2>=3.1"]
# numba/shap floors keep the resolver off broken back-solves (econml -> sparse
# -> numba 0.53 does not build; econml -> shap 0.46 breaks at import on
# numpy >= 2.4). econml itself allows shap < 0.49.
ml = ["econml>=0.15", "numba>=0.60", "shap>=0.48"]
# botorch supplies fit_gpytorch_mll (the maintained fit API; the removed
# fit_gpytorch_model was the DEE repo's breakage, repo risk 9).
gp = ["torch>=2.2", "gpytorch>=1.13", "botorch>=0.12"]
# API-mode guidance backends (SDKs imported lazily). Deliberately NOT installed
# in CI: tests/test_llm_api.py injects fake clients (no network, no keys) and its
# real-SDK smoke tests skip gracefully when this extra is absent.
llm = ["anthropic>=0.40", "google-genai>=1.0"]
dev = ["pytest>=8", "ruff>=0.4", "pytest-cov"]

[project.scripts]
natex = "natex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/natex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["backtest: needs local real datasets (env NATEX_DATA); deselect with -m 'not backtest'"]
addopts = "-m 'not backtest'"
